Bug#58319 Getting status of nodes gives error after using ndb_mgm_stop()  - ndb_mgm_stop_* returned 0 when timeout occured while waiting for    reply fron mdn_mgmd, now it returns -1, also moved "stoppedNoOfNodes"    to local scope where it's used and renamed to "stopped"  - ndb_mgm_restart_* return 0 if reply was NULL since "restarted" variable    was initialized to 0 and used as return value. Moved restarted variable to    local scope where it's used and remove it's 0 initializer, should give warning if    used without proper init(which should be to value recevied from ndb_mgmd)  - Some commands are synchronous and known to take longer time    to complete(for example restart and stop). Increase the timeout    value to 5 minutes before sending those commands if the timeout value    is set lower than that and reset it back to old timeout value afterwards.  - Fix problem where the timeout value was set to _exactly_ 5 minutes   even if original timeout value was greater than that.  -  Fix problem where only ndb_mgm_restart* had min value for timeout,    now ndb_mgm_stop* has it as well. - NOTE!  Unfortunately the restart or stop may take longer than the   defalt min timeout value selected, mgmapi users can workaround   this problem by setting an even larger timeout for all commands   or only around restart and stop